# PCCSolver

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
data/coloration/: test.col
src/: main.cpp  model.cpp  model.h  statistics.h
src/constraints/: Constraint.h
src/decisions/selectors/: minvalueselector.h  randomvalueselector.cpp  randomvalueselector.h  valueselector.h
src/decisions/selectors/values/: hybridvalueselector.cpp  hybridvalueselector.h  leastconstrainedvalueselector.cpp  leastconstrainedvalueselector.h  minvalueselector.cpp  minvalueselector.h  randomvalueselector.cpp  valueselector.cpp  valueselector.h
src/decisions/selectors/variables/: most_constrained.cpp  most_constrained.h  random.cpp  random.h  variableselector.h
src/memory/: trails.cpp  trails.h
src/problems/: problems.h
src/propagators/: Propagator.cpp  Propagator.h  prop_equal_x_y.cpp  prop_equal_x_y.h  prop_x_not_y.cpp  prop_x_not_y.h  prop_x_not_yc.cpp  prop_x_not_yc.h
src/utils/: OrderedSet.cpp  OrderedSet.h  graphs.h
src/variables/: IntVar.cpp  IntVar.h
